stop canvas being blurry

--- a/www/visualiser.css
+++ b/www/visualiser.css
@@ -51,7 +51,6 @@ canvas {
     margin-left: auto;
     margin-right: auto;
     display: block;
-    width: 100%;
 }
 
 hr {
